package board;

public class ObstacleCard extends Card {
    public ObstacleCard(String name, int hp, int maxhp) {
        super(name, hp, maxhp);
    }
}
