package vue;

public enum UserChoice {
    PIOCHER,PASSER,PLACER;
}
